--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       animation: moveBackground 60s linear infinite;
       color: rgb(255, 0, 200);
     }
+<a href="https://twitter.com/YOUR_USERNAME" target="_blank">🐦 @wru_kii</a>
 
     @keyframes moveBackground {
       from {
