--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
       }
     }
 
-    <a href="https://twitter.com/YOUR_USERNAME" target="_blank">🐦 @wru_kii</a>
-
     body::before {
       content: "";
       position: fixed;
@@ -126,7 +124,7 @@
       <a id="tweetLink" class="share-link" target="_blank">Share on Twitter 🐦</a>
     </div>
   </div>
-
+<a href="https://twitter.com/wru_kii" target="_blank">🐦 @wru_kii</a>
   <script>
     const tweetTemplates = [
       name => `${name} is building zk sandcastles with Succinct 🏖️ #Succinctsummer`,
